<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedRecords"
    android:background="@drawable/bgrdb">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView2"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/edtPatientEmail"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:ems="10"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        android:hint="@string/edtPatientEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <EditText
        android:id="@+id/edtPractitionerName"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/edtPractitionerName"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <EditText
        android:id="@+id/edtIllness"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/edtIllness"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <EditText
        android:id="@+id/edtMedicine"
        android:layout_width="259dp"
        android:layout_height="107dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="start|top"
        android:hint="@string/edtMedicine"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/btnSelectDate2"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:text="@string/btnSelectDate2"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <Button
        android:id="@+id/btnAddmr"
        android:layout_width="248dp"
        android:layout_height="56dp"
        android:text="@string/btnAddmr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />


</androidx.constraintlayout.widget.ConstraintLayout>